pov-check-health (0.13.0) UNRELEASED; urgency=medium

  * check-virtualenvs:
    - new option -n to print the cp commands that -f would execute,
    - ignore docker/flatpak/snap/lxd containers (GH #23).
  * check-health:
    - fix checknfs to actually check the local mountpoint, not the remote
      export name.
  * New checks:
    - check_no_matching_lines (GH #5),
    - checkcert_smtp_starttls (GH #10).
  * Fix shellcheck warnings in all the scripts.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 03 May 2019 15:40:42 +0300

pov-check-health (0.12.1) trusty; urgency=medium

  * check-health -g:
    - skip 'systemd --user' which exists only when there are login sessions.
  * check-ssl-certs(8):
    - mention the synopses of checssl* functions.
  * check-web-health(8):
    - minor wording and capitalization fixes.

 -- Marius Gedminas <marius@gedmin.as>  Wed, 06 Dec 2017 17:16:33 +0200

pov-check-health (0.12.0) precise; urgency=medium

  * all checkers return a status code in addition to emitting a warning
    (0 if all's fine, 1 if the check warned about something), so you can
    do things like 'checkproc foo || service foo start'.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 27 Jan 2017 16:01:22 +0200

pov-check-health (0.11.0) precise; urgency=medium

  * checkcert et al: reduce the default number of days before a warning to 21.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 13 Oct 2016 09:52:21 +0300

pov-check-health (0.10.5) precise; urgency=medium

  * checkram: don't double-count free memory on Ubuntu 16.04 LTS (GH #18).

 -- Marius Gedminas <marius@gedmin.as>  Fri, 19 Aug 2016 10:50:38 +0300

pov-check-health (0.10.4) precise; urgency=medium

  * check-health -g:
    - sort process names using locale-independent collation order,
    - emit correct checks for systemd-journal and systemd-timesyn.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 18 Aug 2016 15:37:20 +0300

pov-check-health (0.10.3) precise; urgency=medium
